[package]
name = "solvability_checker"
version = "1.0.0"
authors = ["n01e0 <reoshiseki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="2.33.3", features=["yaml"]}
rayon = "1.5.0"
ureq = { version="2.1.0", features=["json"] }
walkdir = "2.3.2"
