[package]
name = "solvability_checker"
version = "1.1.0"
authors = ["n01e0 <reoshiseki@gmail.com>"]
edition = "2021"
description = "Solvability checker for CTF"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
rayon = "1.11.0"
serde_json = "1.0.145"
ureq = { version="3.1.4", features=["json"] }
walkdir = "2.5.0"
